# pacPrism

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Makefile  README.md  README_DEVLOG.md  README_zh.md  conversation_summary.md  index.html  index_zh.html  vcpkg.json
.github/workflows/: build.yml  cmake-multi-platform.yml
cmake/: BeastConfig.cmake  BuildConfig.cmake  LibraryConfig.cmake  VersionConfig.cmake  version.h.in  version.hpp.in
config/: pacprism.conf
devlog_zh/: README_DEVLOG.md  devlog_2025-11-23.md  devlog_2025-11-24.md  devlog_2025-11-25.md  devlog_2025-11-26.md  devlog_2025-11-27.md  devlog_2025-11-30.md  devlog_2025-12-03.md  devlog_2025-12-10.md  devlog_2025-12-11.md  devlog_2025-12-21.md  devlog_2025-12-22.md  devlog_2025-12-23.md  directory_structure.txt
docs/: BUILD_GUIDE.md  CNAME  CURRENT_STATUS.md  PROJECT_STRUCTURE.md  README.md  ROADMAP.md  VERSION_SYSTEM.md  _config.yml  dht_operation.md  index.html  index_zh.html
docs/assets/css/: style.css
docs/idea/: idea.md
include/console/banner/: banner.hpp
include/console/io/: io.hpp
include/console/parser/: parser.hpp
include/network/dht/: dht_store.h
include/network/router/: router.h  router.hpp
include/network/transmission/: transmission.h  transmission.hpp
include/node/dht/: dht_operation.h  dht_operation.hpp  dht_store.h  dht_types.h  dht_types.hpp
include/node/package/: parser.hpp
include/node/sharding/: sharding_types.h  sharding_types.hpp
include/node/validator/: validator.hpp
lib/: CMakeLists.txt
lib/network/dht/: dht_store.cpp
lib/network/router/: router.cpp
lib/network/transmission/: transmission.cpp
lib/node/dht/: dht_operation.cpp  dht_store.cpp
scripts/: AsioConfig.cmake  BeastConfig.cmake  LibraryConfig.cmake  PlatformConfig.cmake  README.md  build.ps1  build.sh  fastbuild.bat  fastbuild.ps1
src/: CMakeLists.txt  main.cpp
src/console/banner/: banner.cpp
src/console/io/: io.cpp
src/console/parser/: parser.cpp
src/network/router/: router.cpp
src/network/transmission/: transmission.cpp
src/node/dht/: dht_operation.cpp
src/node/package/: parser.cpp
src/node/validator/: validator.cpp
test/: CMakeLists.txt  README.md  common.hpp  main.cpp  test_pacprism.ps1  test_pacprism.sh
test/console/banner/: test_banner.cpp
test/console/io/: test_io.cpp
test/console/parser/: test_parser.cpp
test/network/router/: test_router.cpp
test/network/transmission/: test_transmission.cpp
test/node/dht/: test_dht.cpp
test/node/package/: test_parser.cpp  test_parser_debug.cpp
test/node/validator/: test_validator.cpp
